After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722414 - vp8pay: Memory leak
vp8pay: Memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.0.10
Other All
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-17 13:39 UTC by Morgan Lindqvist
Modified: 2014-02-04 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morgan Lindqvist 2014-01-17 13:39:50 UTC
There is a significant memory leak in the pay loader for VP8 (about 1MB every 4-5 second). The computer will run out of memory quite fast when sending VP8 video.

The leak can be seen with the following get-launch command and "top".

gst-launch-1.0 videotestsrc ! vp8enc ! rtpvp8pay ! fakesink

As we can see this bug is not fixed in 1.2 or master.
Comment 1 Sebastian Dröge (slomo) 2014-01-20 09:13:46 UTC
Will backport to 1.2 later.

commit e178cf60ae6ebee9d77598eea8aa733cbe1e43cd
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Mon Jan 20 10:12:45 2014 +0100

    rtpvp8pay: Don't leak input buffers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722414