rtpvp8pay: Don't leak input buffers

https://bugzilla.gnome.org/show_bug.cgi?id=722414